[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/ActorBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Effects/ring_light_64.png" type="Texture" id=2]
[ext_resource path="res://Assets/Effects/plus_sign.png" type="Texture" id=3]
[ext_resource path="res://Assets/Animations/walk.tres" type="Animation" id=4]
[ext_resource path="res://Assets/Animations/attack.tres" type="Animation" id=5]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0, 0.0818713, 1 )
colors = ColorArray( 0.193848, 1, 0.1875, 0, 0.158966, 1, 0.152344, 1, 0.302734, 0.605469, 0, 0 )

[sub_resource type="Animation" id=7]

resource/name = "attack"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":1, "values":[ 10, 11, 12, 13, 5 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 3, 4 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HealParticles:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 50.0

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 50.0

[node name="ActorBase" type="Node2D"]

script/script = ExtResource( 1 )
spritesheet = null
tile_dimensions = Vector2( 3, 2 )

[node name="Sprite" type="Sprite" parent="."]

vframes = 2
hframes = 3
frame = 3

[node name="Selected" type="Light2D" parent="."]

enabled = false
editor_only = false
texture = ExtResource( 2 )
offset = Vector2( 0, 0 )
scale = 0.5
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 0
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="State" type="Light2D" parent="."]

enabled = false
editor_only = false
texture = ExtResource( 2 )
offset = Vector2( 0, 0 )
scale = 0.5
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 0
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="HealParticles" type="Particles2D" parent="."]

config/amount = 16
config/lifetime = 2.0
config/emitting = false
config/half_extents = Vector2( 20, 8 )
config/texture = ExtResource( 3 )
params/direction = 180.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.2
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/initial_size = 0.25
color/color_ramp = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/attack = SubResource( 7 )
anims/idle = SubResource( 2 )
anims/walk = ExtResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="EffectPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Heal = SubResource( 4 )
anims/attack = ExtResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AttackRange" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]

shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="RayCast2DLeft" type="RayCast2D" parent="."]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayCast2DCenter" type="RayCast2D" parent="."]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayCast2DRight" type="RayCast2D" parent="."]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[connection signal="attack" from="." to="." method="_on_ActorBase_attack"]

[connection signal="body_enter" from="AttackRange" to="." method="_on_AttackRange_body_enter"]


